@@ -93,8 +93,9 @@
 
 #define BALSA_PIXMAP_DROP_DOWN                  "balsa_drop_down"
 
-void register_balsa_pixmaps(void);
-void register_balsa_pixbufs(GtkWidget * widget);
+void balsa_register_pixmaps(void);
+void balsa_unregister_pixmaps(void);
+void balsa_register_pixbufs(GtkWidget * widget);
 void balsa_icon_create(const gchar ** data, GdkPixmap ** pmap,
                        GdkBitmap ** bmap);
 const gchar * balsa_icon_id(const gchar * name);
